prepare for exclude arch from src

--- a/apps/docs/arch/content/docs/api/index.mdx
+++ b/apps/docs/arch/content/docs/api/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: OpenAPI
-description: View the Scalar Galaxy example OpenAPI schema.
+title: Api Documentation
+description: API documentation and specifications.
 ---
 
 ## Features
